<resources>
    <string name="app_name">CountriesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="todo">TODO</string>
</resources>